@@ -46,7 +46,7 @@ def get_auto_arg_list(self_cmd=cmd):
         'ramp_new'       : [ self_cmd.object_sc              , 'ramp'            , ','  ],
         'remove'         : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'reinitialize'   : [ self_cmd.commanding.reinit_sc   , 'option'          , ''   ],
-        
+        'revalence'      : [ self_cmd.selection_sc           , 'selection'       , ', '   ],        
         'scene'          : [ self_cmd._pymol._scene_dict_sc  , 'scene'           , ''   ],
         'sculpt_activate': [ self_cmd.object_sc              , 'object'          , ''   ],
         'set'            : [ self_cmd.setting.setting_sc     , 'setting'         , ','  ],
@@ -77,7 +77,7 @@ def get_auto_arg_list(self_cmd=cmd):
         'show'           : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'extract'        : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'gradient'       : [ self_cmd.map_sc                 , 'map object'      , ','  ],
-        'get'             : [ self_cmd.object_sc             , 'object'          , ','  ],                        
+        'get'            : [ self_cmd.object_sc             , 'object'          , ','  ],                        
         'hide'           : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'color'          : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'select'         : [ self_cmd.selection_sc           , 'selection'       , ''   ],
@@ -92,6 +92,7 @@ def get_auto_arg_list(self_cmd=cmd):
         'matrix_copy'    : [ self_cmd.object_sc              , 'object'           , ', ' ],
         'spectrum'       : [ self_cmd.palette_sc             , 'palette'         , ''   ],      
         'order'          : [ self_cmd.boolean_sc             , 'sort'            , ','  ],
+        'revalence'      : [ self_cmd.selection_sc           , 'selection'       , ', '   ],                
         'super'          : [ self_cmd.selection_sc           , 'selection'       , ''   ],
         'symexp'         : [ self_cmd.object_sc              , 'object'          , ', ' ],   
         'set_name'       : [ self_cmd.selection_sc     ,       'name'            , ''  ],
@@ -114,6 +115,7 @@ def get_auto_arg_list(self_cmd=cmd):
         'flag'           : [ self_cmd.editing.flag_action_sc , 'flag action'     , ''   ],
         'map_set'        : [ self_cmd.map_sc                 , 'map'             , ' '   ],
         'order'          : [ self_cmd.controlling.location_sc, 'location'        , ','  ],
+        'revalence'      : [ self_cmd.selection_sc           , 'selection'       , ', '   ],                
         'set'            : [ self_cmd.selection_sc           , 'selection'         , ','  ],
         'set_bond'       : [ self_cmd.selection_sc           , 'selection'         , ','  ],
         'spectrum'       : [ self_cmd.selection_sc           , 'selection'       , ''   ],
