@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2008-05-21 Warren L. DeLano <warren@delsci.com>	
+
+	* revalence command for guessing & grafting valences
+	
 2008-05-20 Warren L. DeLano <warren@delsci.com>	
 
 	* now assumes HETATM c1ccnc1 is c1ccn[H]c1
